# ECARMF

./: .gitignore  02-Vision.md  03-Core-Principles.md  04-Framework-Architecture.md  05-Asset-Model.md  06-Economic-Model.md  07-Capital-Model.md  08-Risk-Model.md  09-Threshold-Engine.md  10-Risk-Scoring.md  11-Decision-Engine.md  12-Compliance.md  13-Governance.md  14-Implementation-Guide.md  15-API-Specification.md  16-Examples.md  17-Glossary.md  18-FAQ.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CapitalModel.md  CommercialRealEstate.py  DecisionEngine.md  DecisionModel.md  ECARMF 002.xlsx  ECARMF-001-Foundation-Standard.md  ECARMF-T9-TCEL-Refinements-Implementation-Plan.md  ECARMF.sln  ECARMF_006_020_UPLOAD_INDEX.md  EconomicModel.md  Energy.py  FRAMEWORK.md  ForecastModel.md  GOVERNANCE.md  Infrastructure.py  LICENSE  Manufacturing.py  (+29 more)
.claude/: launch.json  (+1 more)
IRS-AIKB/: .gitignore  Launch MAG Audit.cmd  README.md  launch_mag_audit.py  pyproject.toml
IRS-AIKB/app/: index.html
IRS-AIKB/data/: README.md
IRS-AIKB/docs/: ARCHITECTURE.md  BUILD_REPORT.json  CASE_OPERATIONS_WORKSPACE.md  CHIEF_AUDIT_ENGINE_V03.md  CHIEF_AUDIT_OFFICER_ENGINE.md  CLIENT_INPUT_AND_UPLOAD_DESIGN.md  CLIENT_TRANSPARENCY_AND_AI_ENGAGEMENT.md  GOVERNANCE.md  IDR_RIGHTS_CONTROVERSY_ENGINE.md  MAG_AUDIT_MULTI_JURISDICTION_DESIGN.md  MAG_AUDIT_SYSTEM_MASTER_NARRATIVE.md  ORGANIZATIONAL_INTELLIGENCE_CONTROL_PLANE_V05.md  OUTCOME_RESOLUTION_VALUE_ENGINE.md  PRODUCTION_PIPELINE_V04.md  RETURN_INTAKE_AND_CANONICAL_MODEL.md  RETURN_RECONCILIATION_ENGINE.md  (+3 more)
(+953 files in other folders)
