[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irs-aikb"
version = "0.1.0"
description = "IRS audit intelligence knowledge base and readiness rules engine"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[project.scripts]
irs-aikb = "irs_aikb.cli:main"

[tool.setuptools]
packages = ["irs_aikb"]
